Use the giosrc when reading from gvfs archive mounts

Reading that same file through FUSE fails.

https://bugzilla.gnome.org/show_bug.cgi?id=597448